@@ -10,6 +10,9 @@ debug: WXLIBS += --debug=yes
 debug: LINKEROPTS = -v
 debug: all
 
+$(IMGDISPLAY_O): $(IMGDISPLAY_C) $(IMGDISPLAY_D)
+	$(CC) $(CXXFLAGS) `$(WXFLAGS)` $(DEFINES) -I$(INCLUDE) $(IMGDISPLAY_C)
+
 $(GNRCABT_O): $(GNRCABT_C) $(GNRCABT_D)
 	$(CC) $(CXXFLAGS) `$(WXFLAGS)` $(DEFINES) -I$(INCLUDE) $(GNRCABT_C)
 
