@@ -3,3 +3,4 @@
 - Changed licensing to MIT
 - Made code non-linux specific
 - Replaced images: yak, noodle, pretzel, zipper
+- Added support for SVG images using wxSVG
